Created templates and views

--- a/CWBDataApp/templates/CWBDataApp/help.html
+++ b/CWBDataApp/templates/CWBDataApp/help.html
@@ -1,7 +1,7 @@
 {% extends 'CWBDataApp/base.html'%}
 
-{% block title %} {{'Home'}} {% endblock title %}
+{% block title %} {{'Help'}} {% endblock title %}
 
 {% block content %}
-    <p>home page</p>
+      <p>help page</p>
 {% endblock content %}
