Updated navbar and added ordersheet pages for each machine

--- a/CWBDataApp/templates/CWBDataApp/OrderSheetsMachine2.html
+++ b/CWBDataApp/templates/CWBDataApp/OrderSheetsMachine2.html
@@ -3,5 +3,5 @@
 {% block title %} {{'Product Inventory'}} {% endblock title %}
 
 {% block content %}
-      <p>Order sheets</p>
+      <p>Order sheets Machine 2</p>
 {% endblock content %}
