--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -7,9 +7,11 @@
           {{ page_title|default:"Untitled page" }}
         {% endblock title %}
       </title>
+
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
       {% load static %}
       <link rel="stylesheet" type="text/css" href="{% static 'CWBDataApp/base.css'%}">
+    
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   </head>
 
@@ -18,19 +20,18 @@
     <main class="flex-fill">
 
       <!-- Menu bar on top of the page-->
-      <nav class="navbar center navbar-expand-lg">
-        <button class="navbar-toggler" type="button" data-trigger="#mainNav">
-          {%load static%}
-          <img src="{% static 'CWBDataApp/images/toggle.png'%}" alt="toggle" class="toggle-button">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          {% load static %}
+          <img src="{% static 'CWBDataApp/images/cwbtech.jpg'%}" alt="cwbtech">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="navbar-collapse justify-content-center" id="mainNav">
-          <div class="offcanvas-header mt-3">
-            <button class="btn btn-outline-danger btn-close close-toggle"> &times Close </button>
-          </div>
-          {% load static %}
-          <img id="navImage" src="{% static 'CWBDataApp/images/cwbtech.jpg'%}" alt="cwbtech">
-          <ul class="nav justify-content-center" id="navText">
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:index' %}">Home</a>
               </li>
@@ -46,8 +47,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:MaterialInventory'%}">Material Inventory</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'CWBDataApp:OrderSheets'%}">Order Sheets</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
+                  Order Sheets
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine1'%}"> Machine 1 </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine2'%}"> Machine 2 </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine3'%}"> Machine 3 </a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Help</a>
