--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -61,6 +61,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Help</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin:index'%}">Admin</a>
+              </li>
           </ul>
         </div>
       </nav>
