--- a/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
@@ -28,7 +28,7 @@
           {% csrf_token %}
           <div class="inline-flex inputBox">
             <label for="newbatch">Batch Name*: </label>
-            <input id="newBatch" type="text" name="newBatch">
+            <input id="newBatch" type="text" name="newBatch" maxlength="15">
           </div>
 
           <div class="inline-flex inputBox">
