Finished product inventory data entry form

--- a/CWBDataApp/static/CWBDataApp/body.css
+++ b/CWBDataApp/static/CWBDataApp/body.css
@@ -31,6 +31,14 @@ select
   font-weight: bold;
 }
 
+#accepted
+{
+  color: green;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+
 form
 {
   margin-bottom: 5%;
