--- a/CWBDataApp/templates/CWBDataApp/MaterialTestQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialTestQuery.html
@@ -16,8 +16,19 @@
     </p>
     <p id="descriptionParagraph">If you want to enter material testing data click <a href="{% url 'CWBDataApp:MaterialTest'%}">HERE</a></p>
 
-  {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
+    {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
+  </div>
 
-</div>
+  <form action="{% url 'CWBDataApp:MaterialTestQuery'%}" method="post">
+    <div class="d-inline-flex flex-column">
+      {% csrf_token %}
+      <div class="inline-flex inputBox">
+        <label for="batchName">Batch Name*: </label>
+        <input id="batchName" type="text" name="batchName" maxlength="15">
+      </div>
+      <br>
+      <input type="submit" name="enterNewBatch" value="Submit">
+    </div>
+  </form>
 
 {% endblock content %}
