--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
@@ -9,20 +9,22 @@
 
 {% block content %}
 <div>
-  <h2 id="header"> Product Inventory Entry Form </h2>
+  <h2 id="header"> Product Inventory Update Form </h2>
   <p id="descriptionParagraph">
       Product inventory entry is to be used to enter data regarding the finshed product skids in the shop.
   </p>
-  <p id="descriptionParagraph">If you want to pull product inventory data click <a href="{% url 'CWBDataApp:ProductInventoryQuery'%}">QUERY</a> or update inventory click <a href="{% url 'CWBDataApp:ProductInventoryUpdate'%}">UPDATE</a></p>
+  <p id="descriptionParagraph">If you want to pull product inventory data click <a href="{% url 'CWBDataApp:ProductInventoryQuery'%}">QUERY</a> or enter inventory data click <a href="{% url 'CWBDataApp:ProductInventory'%}">ENTER</a></p>
 
-{% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
-{% if dataAcceptedMessage %} <p id="accepted"> {{dataAcceptedMessage}} </p> {% endif %}
+  {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
+  {% if dataAcceptedMessage %} <p id="accepted"> {{dataAcceptedMessage}} </p> {% endif %}
 
-  </div>
+</div>
 
-  <form action="{% url 'CWBDataApp:ProductInventory'%}" method="post">
+
+
+  <form action="{% url 'CWBDataApp:ProductInventoryUpdate'%}" method="post">
     <div class="d-inline-flex flex-column">
-      <h4 id=header>Add Product </h4>
+      <h4 id=header>Update Product </h4>
       {% csrf_token %}
       <div class="inline-flex inputBox">
         <label for="prodName">Product Name*: </label>
@@ -40,21 +42,6 @@
         <input id="colour" type="text" name="colour" maxlength="15">
       </div>
 
-      <div class="inline-flex inputBox">
-        <label for="embossed">Are the boards embossed?*: </label>
-        <select id="embossed" name="embossed">
-          <option value="1">Yes</option>
-          <option value="0">No</option>
-        </select>
-      </div>
-
-      <div class="inline-flex inputBox">
-        <label for="doubleSide">Are the embossed on both sides?: </label>
-        <select id="doubleSide" name="doubleSide">
-          <option value="0">No</option>
-          <option value="1">Yes</option>
-        </select>
-      </div>
 
       <div class="inline-flex inputBox">
         <label for="numSkids">Number of Skids*: </label>
@@ -63,7 +50,7 @@
 
       <br>
 
-      <input type="submit" name="enterNewProduct" value="Add">
+      <input type="submit" name="enterNewProduct" value="Update">
     </div>
   </form>
 
