--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
@@ -39,7 +39,13 @@
 
       <div class="inline-flex inputBox">
         <label for="colour">Colour*: </label>
-        <input id="colour" type="text" name="colour" maxlength="15">
+        <select id="colour" type="text" name="colour">
+          {% if allColours %}
+            {% for entry in allColours %}
+                <option value="{{ entry.colour }}">{{ entry.colour }}</option>
+            {% endfor %}
+          {% endif %}
+        </select>
       </div>
 
 
